modify some templates

--- a/MUTransport/templates/MUTransport_init_interactive.htm
+++ b/MUTransport/templates/MUTransport_init_interactive.htm
@@ -20,6 +20,7 @@
 	<dt style="font-weight: 700">{gt text="Make some settings"}</dt>
 	<dd>{gt text="enable and disable modules, set a paths for images, choose text or html format and some more !"}</dd>
 </dl>
-<p><a href="{pnmodurl modname="MUTransport" type="interactiveinstaller" func="step2" authid=$authid}"
-title="{gt text="Continue the installation"}"> {gt text="Continue the installation"}
-</a></p>
+{insert name='csrftoken' assign='csrftoken'}
+    <p><a href="{modurl modname='MUTransport' type='interactiveinstaller' func='step2' csrftoken=$csrftoken activate=$activate}" title="{gt text='Continue the installation'}">
+        {gt text='Continue the installation'}
+    </a></p>
