--- a/MUTransport/templates/MUTransport_admin_modifyconfig.htm
+++ b/MUTransport/templates/MUTransport_admin_modifyconfig.htm
@@ -69,7 +69,7 @@ method="post" enctype="application/x-www-form-urlencoded">
 	size="1">
 	<option value="">{gt text="please select"}</option>
 	<option value="text">text</option>
-	<option value="html">html</option>
+	<option value="Html">html</option>
 </select> {/if}</div>
 </fieldset>
 <fieldset><legend>{gt text="Specific settings for start modules"}</legend>
