--- a/MU/TransportModule/Resources/views/Table/includeDisplayItemListOne.html.twig
+++ b/MU/TransportModule/Resources/views/Table/includeDisplayItemListOne.html.twig
@@ -1,5 +1,17 @@
 {# purpose of this template: inclusion template for display of related tables #}
 {% set hasAdminPermission = hasPermission('MUTransportModule:Table:', '::', 'ACCESS_EDIT') %}
+{% if noLink is not defined %}
+    {% set noLink = false %}
+{% endif %}
 <h4>
+{% spaceless %}
+{% if not noLink %}
+    <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'display', {'id': item.getId()}) }}" title="{{ item|mutransportmodule_formattedTitle|e('html_attr') }}">
+{% endif %}
     {{ item|mutransportmodule_formattedTitle }}
+{% if not noLink %}
+    </a>
+    <a id="tableItem{{ item.getKey() }}Display" href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'display', {'id': item.getId(), raw: 1}) }}" title="{{ __('Open quick view window') }}" class="mutransport-inline-window hidden" data-modal-title="{{ item|mutransportmodule_formattedTitle|e('html_attr') }}"><span class="fa fa-id-card-o"></span></a>
+{% endif %}
+{% endspaceless %}
 </h4>
