--- a/MU/TransportModule/Resources/views/Transport/handleFields.html.twig
+++ b/MU/TransportModule/Resources/views/Transport/handleFields.html.twig
@@ -1,10 +1,64 @@
 {# purpose of this template: module configuration page #}
 {% extends 'MUTransportModule::adminBase.html.twig' %}
-{% block title __('Select 2 tables') %}
+{% block title __('Create the assignment') %}
 {% block admin_page_icon 'square' %}
 {% block content %}
 
     <div class="mutransportmodule-database mutransportmodule-edit">
+    <div class="col-md-1">
+    
+    </div>
+    <div class="col-md-4">
+    <ul class="ui-sortable">
+    
+    {% for source in sources %}
+    {% set color = 'btn-default' %}
+    {% if source.fieldType == 'int' %}
+        {% set color = 'btn-primary' %}
+    {% endif %}
+    {% if source.fieldType == 'datetime' %}
+        {% set color = 'btn-success' %}
+    {% endif %}
+    {% if source.fieldType == 'text' %}
+        {% set color = 'btn-danger' %}
+    {% endif %}
+    {% if source.fieldType == 'tinyint' %}
+        {% set color = 'btn-info' %}
+    {% endif %}
+        <li class="btn {{ color }} draggable">{{ source.fieldName }}
+        <span class="badge">{{ source.fieldType }}</span>
+        <span class="badge">{{ source.fieldLength }}</span></li>
+    {% endfor %}
+    </ul>
+    </div>
+    <div class="col-md-2">
+    
+    </div>
+    <div class="col-md-4">
+    <ul class="ui-sortable">
+    {% for target in targets %}
+    {% set color = 'btn-default' %}
+    {% if target.fieldType == 'int' %}
+        {% set color = 'btn-primary' %}
+    {% endif %}
+    {% if target.fieldType == 'datetime' %}
+        {% set color = 'btn-success' %}
+    {% endif %}
+    {% if target.fieldType == 'text' %}
+        {% set color = 'btn-danger' %}
+    {% endif %}
+    {% if target.fieldType == 'tinyint' %}
+        {% set color = 'btn-info' %}
+    {% endif %}
+        <li class="btn {{ color }} draggable">{{ target.fieldName }}
+        <span class="badge">{{ target.fieldType }}</span>
+        <span class="badge">{{ target.fieldLength }}</span></li>
+    {% endfor %}
+    </ul>
+    </div>
+    <div class="col-md-1">
+    
+    </div>
         {% form_theme form with [
             '@MUTransportModule/Form/bootstrap_3.html.twig',
             'ZikulaFormExtensionBundle:Form:form_div_layout.html.twig'
@@ -12,20 +66,7 @@
         {{ form_start(form, {attr: {id: 'databaseEditForm', class: 'mutransport-edit-form'}}) }}
         {{ form_errors(form) }}
         <div class="row">
-        <div class="col-md-6">
-        <fieldset>
-            <legend>{{ __('Source table') }}</legend>
-            {{ form_row(form.sourceTable) }}
 
-        </fieldset>
-        </div>
-        <div class="col-md-6">
-        <fieldset>
-            <legend>{{ __('Target table') }}</legend>
-            {{ form_row(form.targetTable) }}
-
-        </fieldset>        
-        </div>
         
         </div>
         
@@ -36,4 +77,19 @@
             </div>
         </div>
         {{ form_end(form) }}
+          <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( ".ui-sortable" ).sortable({
+      revert: true
+    });
+    $( "#draggable" ).draggable({
+      connectToSortable: "#sortable",
+      helper: "clone",
+      revert: "invalid"
+    });
+    $( "ul, li" ).disableSelection();
+  } );
+  </script>
 {% endblock %}
