--- a/MU/TransportModule/Resources/views/Database/display.html.twig
+++ b/MU/TransportModule/Resources/views/Database/display.html.twig
@@ -70,14 +70,15 @@
     {% if mayManage %}
         <p class="managelink">
             {% set createTitle = __('Create table') %}
-            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'edit', {database: database.getKey()}) }}" title="{{ createTitle|e('html_attr') }}" class="fa fa-plus">{{ createTitle }}</a>
+            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'edit', {database: database.getKey()}) }}" title="{{ createTitle|e('html_attr') }}"><i class="fa fa-plus"></i> {{ createTitle }}</a>
         </p>
     {% endif %}
 {% endblock %}
 {% block display_hooks %}
-    {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.databases.display_view', id=database.getKey(), urlObject=currentUrlObject) %}
-    {% for providerArea, hook in hooks if providerArea != 'provider.scribite.ui_hooks.editor' %}
-        <h4>{{ providerArea }}</h4>
-        {{ hook }}
-    {% endfor %}
+    {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.databases.display_view', id=database.getKey(), urlObject=currentUrlObject, outputAsArray=true) %}
+    {% if hooks is iterable and hooks|length > 0 %}
+        {% for area, hook in hooks %}
+            <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
