--- a/MU/TransportModule/Resources/views/Database/delete.html.twig
+++ b/MU/TransportModule/Resources/views/Database/delete.html.twig
@@ -35,13 +35,10 @@
     </div>
 {% endblock %}
 {% block display_hooks %}
-    {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.databases.form_delete', id=database.getKey()) %}
+    {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.databases.form_delete', id=database.getKey(), outputAsArray=true) %}
     {% if hooks is iterable and hooks|length > 0 %}
-        {% for providerArea, hook in hooks %}
-            <fieldset>
-                {# <legend>{{ hookName }}</legend> #}
-                {{ hook }}
-            </fieldset>
+        {% for area, hook in hooks %}
+            <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
         {% endfor %}
     {% endif %}
 {% endblock %}
