--- a/MU/TransportModule/Resources/views/Table/edit.html.twig
+++ b/MU/TransportModule/Resources/views/Table/edit.html.twig
@@ -25,7 +25,7 @@
         
         {{ include(
             '@MUTransportModule/Database/includeSelectOne.html.twig',
-            {group: 'table', alias: 'database', aliasReverse: 'tables', mandatory: false, idPrefix: 'transportTable_Database', linkingItem: table, displayMode: 'choices'}
+            {group: 'table', heading: __('Database'), alias: 'database', mandatory: false, idPrefix: 'transportTable_Database', linkingItem: table, displayMode: 'choices'}
         ) }}
         {% if mode != 'create' %}
             {{ include('@MUTransportModule/Helper/includeStandardFieldsEdit.html.twig', {obj: table}) }}
@@ -49,19 +49,15 @@
             </fieldset>
         {% endif %}
         
-        {# include return control #}
-        {% if mode == 'create' %}
-            <fieldset>
-                <legend>{{ __('Return control') }}</legend>
-                {{ form_row(form.repeatCreation) }}
-            </fieldset>
-        {% endif %}
         
         {# include possible submit actions #}
         <div class="form-group form-buttons">
             <div class="col-sm-offset-3 col-sm-9">
                 {% for action in actions %}
                     {{ form_widget(attribute(form, action.id)) }}
+                    {% if mode == 'create' and action.id == 'submit' %}
+                        {{ form_widget(attribute(form, 'submitrepeat')) }}
+                    {% endif %}
                 {% endfor %}
                 {{ form_widget(form.reset) }}
                 {{ form_widget(form.cancel) }}
@@ -69,12 +65,10 @@
         </div>
         {{ form_end(form) }}
         {% set hookId = mode != 'create' ? table.id : null %}
-        {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.tables.form_edit', id=hookId) %}
+        {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.tables.form_edit', id=hookId, outputAsArray=true) %}
         {% if hooks is iterable and hooks|length > 0 %}
-            <h3>{{ __('Hooks') }}</h3>
-            {% for providerArea, hook in hooks if providerArea != 'provider.scribite.ui_hooks.editor' %}
-                <h4>{{ providerArea }}</h4>
-                {{ hook }}
+            {% for area, hook in hooks %}
+                <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
             {% endfor %}
         {% endif %}
         
@@ -82,11 +76,11 @@
 {% endblock %}
 {% block footer %}
     {{ parent() }}
-    {% set editImage = '<span class="fa fa-pencil-square-o"></span>' %}
-    {% set removeImage = '<span class="fa fa-trash-o"></span>' %}
     {% set formInitScript %}
         <script type="text/javascript">
         /* <![CDATA[ */
+            var mUTransportInlineEditHandlers = [];
+            var mUTransportEditHandler = null;
             
             ( function($) {
                 $(document).ready(function() {
