--- a/MU/TransportModule/Resources/views/Table/includeDisplayItemListOne.html.twig
+++ b/MU/TransportModule/Resources/views/Table/includeDisplayItemListOne.html.twig
@@ -11,7 +11,7 @@
     {{ item|mutransportmodule_formattedTitle }}
 {% if not noLink %}
     </a>
-    <a id="tableItem{{ item.getKey() }}Display" href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'display', {'id': item.getId(), raw: 1}) }}" title="{{ __('Open quick view window') }}" class="mutransport-inline-window hidden" data-modal-title="{{ item|mutransportmodule_formattedTitle|e('html_attr') }}"><span class="fa fa-id-card-o"></span></a>
+    <a id="tableItem{{ item.getKey() }}Display" href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'display', {'id': item.getId(), raw: 1}) }}" title="{{ __('Open quick view window') }}" class="mutransport-inline-window hidden" data-modal-title="{{ item|mutransportmodule_formattedTitle|e('html_attr') }}"><i class="fa fa-id-card-o"></i></a>
 {% endif %}
 {% endspaceless %}
 </h4>
