--- a/MU/TransportModule/Resources/views/Table/includeSelectOne.html.twig
+++ b/MU/TransportModule/Resources/views/Table/includeSelectOne.html.twig
@@ -4,11 +4,11 @@
 {% endif %}
 {% if tabs|default(false) == true %}
     <div role="tabpanel" class="tab-pane fade" id="tabTable" aria-labelledby="tableTab">
-        <h3>{{ __('Table') }}</h3>
+        <h3>{{ heading|default ? heading : __('Table') }}</h3>
 {% else %}
     <fieldset class="table">
 {% endif %}
-    <legend>{{ __('Table') }}</legend>
+    <legend>{{ heading|default ? heading : __('Table') }}</legend>
     {% if displayMode == 'choices' %}
         {{ form_row(attribute(form, alias)) }}
     {% elseif displayMode == 'autocomplete' %}
