--- a/MU/TransportModule/Resources/views/Table/view.html.twig
+++ b/MU/TransportModule/Resources/views/Table/view.html.twig
@@ -70,7 +70,7 @@
                         <a href="{{ path('mutransportmodule_database_' ~ routeArea ~ 'display', {'id': table.database.getId()}) }}">{% spaceless %}
                           {{ table.database|mutransportmodule_formattedTitle }}
                         {% endspaceless %}</a>
-                        <a id="databaseItem{{ table.getKey() }}_rel_{{ table.database.getKey() }}Display" href="{{ path('mutransportmodule_database_' ~ routeArea ~ 'display', {'id': table.database.getId(), raw: 1}) }}" title="{{ __('Open quick view window')|e('html_attr') }}" class="mutransport-inline-window hidden" data-modal-title="{{ table.database|mutransportmodule_formattedTitle|e('html_attr') }}"><span class="fa fa-id-card-o"></span></a>
+                        <a id="databaseItem{{ table.getKey() }}_rel_{{ table.database.getKey() }}Display" href="{{ path('mutransportmodule_database_' ~ routeArea ~ 'display', {'id': table.database.getId(), raw: 1}) }}" title="{{ __('Open quick view window')|e('html_attr') }}" class="mutransport-inline-window hidden" data-modal-title="{{ table.database|mutransportmodule_formattedTitle|e('html_attr') }}"><i class="fa fa-id-card-o"></i></a>
                     {% else %}
                         {{ __('Not set.') }}
                     {% endif %}
@@ -116,15 +116,15 @@
         {% if canBeCreated %}
             {% if hasPermission('MUTransportModule:Table:', '::', 'ACCESS_EDIT') %}
                 {% set createTitle = __('Create table') %}
-                <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'edit') }}" title="{{ createTitle|e('html_attr') }}" class="fa fa-plus">{{ createTitle }}</a>
+                <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'edit') }}" title="{{ createTitle|e('html_attr') }}"><i class="fa fa-plus"></i> {{ createTitle }}</a>
             {% endif %}
         {% endif %}
         {% if all == 1 %}
             {% set linkTitle = __('Back to paginated view') %}
-            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'view') }}" title="{{ linkTitle|e('html_attr') }}" class="fa fa-table">{{ linkTitle }}</a>
+            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'view') }}" title="{{ linkTitle|e('html_attr') }}"><i class="fa fa-table"></i> {{ linkTitle }}</a>
         {% else %}
             {% set linkTitle = __('Show all entries') %}
-            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'view', {all: 1}) }}" title="{{ linkTitle|e('html_attr') }}" class="fa fa-table">{{ linkTitle }}</a>
+            <a href="{{ path('mutransportmodule_table_' ~ routeArea ~ 'view', {all: 1}) }}" title="{{ linkTitle|e('html_attr') }}"><i class="fa fa-table"></i> {{ linkTitle }}</a>
         {% endif %}
     </p>
 {% endblock %}
@@ -132,9 +132,11 @@
     
     {# here you can activate calling display hooks for the view page if you need it #}
     {# % if routeArea != 'admin' %}
-        {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.tables.display_view', urlObject=currentUrlObject) %}
-        {% for providerArea, hook in hooks %}
-            {{ hook }}
-        {% endfor %}
+        {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.tables.display_view', urlObject=currentUrlObject, outputAsArray=true) %}
+        {% if hooks is iterable and hooks|length > 0 %}
+            {% for area, hook in hooks %}
+                <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
+            {% endfor %}
+        {% endif %}
     {% endif % #}
 {% endblock %}
