update by generator for version 1.5

--- a/MU/TransportModule/Resources/views/base.html.twig
+++ b/MU/TransportModule/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 {# purpose of this template: general base layout #}
 {% block header %}
+    {{ pageAddAsset('stylesheet', zasset('@MUTransportModule:css/custom.css'), 120) }}
     {{ pageAddAsset('stylesheet', asset('jquery-ui/themes/base/jquery-ui.min.css')) }}
     {{ pageAddAsset('stylesheet', asset('bootstrap-jqueryui/bootstrap-jqueryui.min.css')) }}
     {{ pageAddAsset('javascript', asset('jquery-ui/jquery-ui.min.js')) }}
