--- a/MU/TransportModule/Resources/views/Config/config.html.twig
+++ b/MU/TransportModule/Resources/views/Config/config.html.twig
@@ -53,12 +53,30 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group form-buttons">
             <div class="col-sm-offset-3 col-sm-9">
                 {{ form_widget(form.save) }}
+                {{ form_widget(form.reset) }}
                 {{ form_widget(form.cancel) }}
             </div>
         </div>
         {{ form_end(form) }}
     </div>
+{% endblock %}
+{% block footer %}
+    {{ parent() }}
+    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.Validation.js'), 98) }}
+    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.EditFunctions.js'), 99) }}
+    {% set formInitScript %}
+        <script>
+        /* <![CDATA[ */
+            ( function($) {
+                $(document).ready(function() {
+                    mUTransportInitEditForm('edit', '1');
+                });
+            })(jQuery);
+        /* ]]> */
+        </script>
+    {% endset %}
+    {{ pageAddAsset('footer', formInitScript) }}
 {% endblock %}
