--- a/MU/TransportModule/Resources/views/Database/display.html.twig
+++ b/MU/TransportModule/Resources/views/Database/display.html.twig
@@ -7,8 +7,8 @@
     {{ templateTitle|notifyFilters('mutransportmodule.filter_hooks.databases.filter')|safeHtml }}
     {% set itemActions = knp_menu_get('MUTransportModule:ItemActionsMenu:menu', [], {entity: database, area: routeArea, context: 'display'}) %}
     <div class="dropdown">
-        <a id="itemActions{{ database.getKey() }}DropDownToggle" role="button" data-toggle="dropdown" data-target="#" href="javascript:void(0);" class="hidden dropdown-toggle"><i class="fa fa-tasks"></i> {{ __('Actions') }} <span class="caret"></span></a>
-        {{ knp_menu_render(itemActions, {template: 'ZikulaMenuModule:Override:actions.html.twig'}) }}
+        <a id="itemActions{{ database.getKey() }}DropDownToggleStart" role="button" data-toggle="dropdown" data-target="#" href="javascript:void(0);" class="hidden dropdown-toggle"><i class="fa fa-tasks"></i> {{ __('Actions') }} <span class="caret"></span></a>
+        {{ knp_menu_render(itemActions, {template: 'ZikulaMenuModule:Override:bootstrap_fontawesome.html.twig'}) }}
     </div>
 {% endblock %}
 {% block admin_page_icon 'eye' %}
@@ -78,7 +78,7 @@
     {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.databases.display_view', id=database.getKey(), urlObject=currentUrlObject, outputAsArray=true) %}
     {% if hooks is iterable and hooks|length > 0 %}
         {% for area, hook in hooks %}
-            <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
+            <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook|raw }}</div>
         {% endfor %}
     {% endif %}
 {% endblock %}
