--- a/MU/TransportModule/Resources/views/Database/includeSelectOne.html.twig
+++ b/MU/TransportModule/Resources/views/Database/includeSelectOne.html.twig
@@ -9,7 +9,17 @@
     <fieldset class="database">
 {% endif %}
     <legend>{{ heading|default ? heading : __('Database') }}</legend>
-    {% if displayMode == 'choices' %}
+    {% if displayMode == 'embedded' %}
+        {% set subFields = attribute(form, alias) %}
+        <fieldset>
+            <legend>{{ __('Content') }}</legend>
+            {{ form_row(attribute(subFields, 'name')) }}
+            {{ form_row(attribute(subFields, 'dbName')) }}
+            {{ form_row(attribute(subFields, 'dbUser')) }}
+            {{ form_row(attribute(subFields, 'dbPassword')) }}
+            {{ form_row(attribute(subFields, 'host')) }}
+        </fieldset>
+    {% elseif displayMode == 'choices' %}
         {{ form_row(attribute(form, alias)) }}
     {% elseif displayMode == 'autocomplete' %}
         {{ form_row(attribute(form, alias)) }}
