--- a/MU/TransportModule/Resources/views/Field/edit.html.twig
+++ b/MU/TransportModule/Resources/views/Field/edit.html.twig
@@ -2,11 +2,6 @@
 {% set baseTemplate = app.request.query.getBoolean('raw', false) ? 'raw' : (routeArea == 'admin' ? 'adminBase' : 'base') %}
 {% extends 'MUTransportModule::' ~ baseTemplate ~ '.html.twig' %}
 
-{% block header %}
-    {{ parent() }}
-    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.Validation.js'), 98) }}
-    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.EditFunctions.js'), 99) }}
-{% endblock %}
 {% block title mode == 'create' ? __('Create field') : __('Edit field') %}
 {% block admin_page_icon mode == 'create' ? 'plus' : 'pencil-square-o' %}
 {% block content %}
@@ -60,7 +55,7 @@
             <div class="col-sm-offset-3 col-sm-9">
                 {% for action in actions %}
                     {{ form_widget(attribute(form, action.id)) }}
-                    {% if mode == 'create' and action.id == 'submit' %}
+                    {% if mode == 'create' and action.id == 'submit' and form.submitrepeat is defined %}
                         {{ form_widget(attribute(form, 'submitrepeat')) }}
                     {% endif %}
                 {% endfor %}
@@ -73,7 +68,7 @@
         {% set hooks = notifyDisplayHooks(eventName='mutransportmodule.ui_hooks.fields.form_edit', id=hookId, outputAsArray=true) %}
         {% if hooks is iterable and hooks|length > 0 %}
             {% for area, hook in hooks %}
-                <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook }}</div>
+                <div class="z-displayhook" data-area="{{ area|e('html_attr') }}">{{ hook|raw }}</div>
             {% endfor %}
         {% endif %}
         
@@ -81,19 +76,20 @@
 {% endblock %}
 {% block footer %}
     {{ parent() }}
+    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.Validation.js'), 98) }}
+    {{ pageAddAsset('javascript', zasset('@MUTransportModule:js/MUTransportModule.EditFunctions.js'), 99) }}
     {% set formInitScript %}
-        <script type="text/javascript">
+        <script>
         /* <![CDATA[ */
             var mUTransportInlineEditHandlers = [];
             var mUTransportEditHandler = null;
             
             ( function($) {
                 $(document).ready(function() {
-                    // initialise auto completion for user fields
+                    mUTransportInitEditForm('{{ mode }}', '{% if mode != 'create' %}{{ field.id }}{% endif %}');
                     {% if form.moderationSpecificCreator is defined %}
                         initUserLiveSearch('mutransportmodule_field_moderationSpecificCreator');
                     {% endif %}
-                    mUTransportInitEditForm('{{ mode }}', '{% if mode != 'create' %}{{ field.id }}{% endif %}');
                 });
             })(jQuery);
         /* ]]> */
