--- a/MU/TransportModule/Resources/views/Table/includeSelectOne.html.twig
+++ b/MU/TransportModule/Resources/views/Table/includeSelectOne.html.twig
@@ -9,7 +9,14 @@
     <fieldset class="table">
 {% endif %}
     <legend>{{ heading|default ? heading : __('Table') }}</legend>
-    {% if displayMode == 'choices' %}
+    {% if displayMode == 'embedded' %}
+        {% set subFields = attribute(form, alias) %}
+        <fieldset>
+            <legend>{{ __('Content') }}</legend>
+            {{ form_row(attribute(subFields, 'name')) }}
+            {{ form_row(attribute(subFields, 'description')) }}
+        </fieldset>
+    {% elseif displayMode == 'choices' %}
         {{ form_row(attribute(form, alias)) }}
     {% elseif displayMode == 'autocomplete' %}
         {{ form_row(attribute(form, alias)) }}
